--- a/public/webStatic/css/reset.css
+++ b/public/webStatic/css/reset.css
@@ -42,3 +42,7 @@ Example:		class="clearfix|cl"
 Explain:		Clearfix（简写cl）避免因子元素浮动而导致的父元素高度缺失能问题
 */
 .cl:after,.clearfix:after{content:".";display:block;height:0;clear:both;visibility:hidden}.cl,.clearfix{zoom:1}
+
+input[type="submit"],input[type="reset"]{
+	border: none;
+}
