--- a/public/webStatic/css/goods-management.css
+++ b/public/webStatic/css/goods-management.css
@@ -2,7 +2,7 @@
 	display: block;
 	width: 100px;
 	height: 36px;
-	background: url(../img/tianjia.png) no-repeat;
+	background: url(../images/tianjia.png) no-repeat;
 	float: left;
 }
 table img{
