--- a/public/webStatic/css/terrace.css
+++ b/public/webStatic/css/terrace.css
@@ -7,7 +7,7 @@ section {
 	display: block;
 	width: 100px;
 	height: 36px;
-	background: url(../img/tianjia.png) no-repeat;
+	background: url(../images//tianjia.png) no-repeat;
 	float: left;
 }
 
@@ -19,7 +19,7 @@ section>div {
 .tre-shaixuan {
 	width: 627px;
 	height: 36px;
-	background: url(../img/pingtai.png) no-repeat;
+	background: url(../images/junfang2.png) no-repeat;
 	float: left;
 	margin-left: 35px;
 	line-height: 36px;
