--- a/public/webStatic/css/terrace.css
+++ b/public/webStatic/css/terrace.css
@@ -24,7 +24,15 @@ section>div {
 	margin-left: 35px;
 	line-height: 36px;
 }
-
+/*.platshaixuan{
+	width: 627px;
+	height: 36px;
+	background: url(../images/pingtaisousuo.png) no-repeat;
+	float: left;
+	margin-left: 35px;
+	line-height: 36px;
+}
+*/
 .tre-state {
 	width: 151px;
 	height: 24px;
