--- a/public/webStatic/css/iframe.css
+++ b/public/webStatic/css/iframe.css
@@ -34,7 +34,7 @@ section a {
 }
 .floor_div{
 	overflow: hidden;
-	padding-left: 90px;
+	
 	height: 90px;
 	line-height: 90px;
 }
@@ -59,9 +59,40 @@ section a {
 	font-weight: 800;
 	text-indent: 7%;
 	padding-top:5%;
+	overflow: hidden;
+	text-overflow:ellipsis;
+	white-space: nowrap;
 }
 
 .goods-list {
 	display: flex;
 	flex-wrap: wrap;
+}
+.floor_span{
+	display: block;
+	width: 84px;
+	height: 84px;
+	color: #fff;
+	font-weight: bolder;
+	font-size: 35px;
+	border-radius: 50%;
+	background: #03ccbb;
+	line-height: 84px;
+	text-align: center;
+}
+.floor_spansmall{
+	display: inline-block;
+	width: 40px;
+	height: 40px;
+	color: #fff;
+	font-weight: bolder;
+	font-size: 16px;
+	border-radius: 50%;
+	background: #03ccbb;
+	line-height: 40px;
+	text-align: center;
+	float: left;
+	margin-top: 27px;
+    margin-left: 21px;
+    margin-right: 5px
 }
