--- a/public/webStatic/css/iframe.css
+++ b/public/webStatic/css/iframe.css
@@ -1,4 +1,7 @@
-
+html,body{
+	height: 100%;
+	width: 100%;
+}
 section {
 	
 	/*	margin-left: 200px;*/
@@ -45,6 +48,8 @@ section a {
 	width: 18%;
 	margin-left: 1.3%;
 	margin-bottom: 1.3%;
+	float:left;
+	
 }
 
 .goods-list li img {
@@ -62,11 +67,28 @@ section a {
 	overflow: hidden;
 	text-overflow:ellipsis;
 	white-space: nowrap;
+	
+	
+}
+@-moz-document url-prefix() {
+   .goods-list li p {
+      height: 14%;
+    }
+    .goods-list li{
+    	margin-bottom: 12px;
+    }
 }
 
 .goods-list {
+	  display: -moz-box;
+	 display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
 	display: flex;
+	-webkit-flex-wrap:wrap;
+	 -moz--flex-wrap:wrap;
 	flex-wrap: wrap;
+	height: auto;
 }
 .floor_span{
 	display: block;
