--- a/public/webStatic/css/military.css
+++ b/public/webStatic/css/military.css
@@ -105,7 +105,7 @@ tr a {
 	padding-right: 40px;
 }
 
-.mly-more div:nth-child(1) {
+.arymy_div1 {
 	height: 86px;
 	line-height: 86px;
 	color: #0c9bdd;
@@ -118,26 +118,64 @@ tr a {
 	overflow: hidden;
 	margin-top: 38px;
 }
+.mly-more div:first-child+div{
+	overflow: hidden;
+	margin-top: 38px;
+}
 
 .mly-more div:nth-child(2) p:nth-child(1) {
 	float: left;
 	font-size: 16px;
 }
+.mly-more div:first-child+div p:first-child {
+	float: left;
+	font-size: 16px;
+}
+
 
 .mly-more div:nth-child(2) p:nth-child(2) {
 	float: right;
 	font-size: 16px;
 }
+.mly-more div:first-child+div p:first-child+p {
+	float: right;
+	font-size: 16px;
+}
 
+
+
+
+.mly-more div:first-child+div p input {
+	height: 43px;
+	width: 305px;
+	outline: 0;
+	margin-left: 18px;
+}
 .mly-more div:nth-child(2) p input {
 	height: 43px;
 	width: 305px;
 	outline: 0;
 	margin-left: 18px;
 }
+
+
+
+
+
 .mly-more div:nth-child(3) {
 	overflow: hidden;
 	margin-top: 38px;
+}.mly-more div:first-child+div+div {
+	overflow: hidden;
+	margin-top: 38px;
+}
+
+
+
+.mly-more div:first-child+div+div p:first-child {
+	float: left;
+	font-size: 16px;
+	position: relative;
 }
 .mly-more div:nth-child(3) p:nth-child(1) {
 	float: left;
@@ -145,10 +183,22 @@ tr a {
 	position: relative;
 }
 
+
+
+
+
 .mly-more div:nth-child(3) p:nth-child(2) {
 	float: right;
 	font-size: 16px;
 }
+.mly-more div:first-child+div+div p:first-child+div {
+	float: right;
+	font-size: 16px;
+}
+
+
+
+
 
 .mly-more div:nth-child(3) p input {
 	height: 43px;
@@ -156,6 +206,15 @@ tr a {
 	outline: 0;
 	margin-left: 18px;
 }
+.mly-more div:first-child+div+div p input {
+	height: 43px;
+	width: 305px;
+	outline: 0;
+	margin-left: 18px;
+}
+
+
+
 .mly-more div:nth-child(3) p select {
 	height: 30px;
 	width: 60px;
@@ -164,4 +223,11 @@ tr a {
 	top: 9px;
 	right: 6px;
 }
-
+.mly-more div:first-child+div+div p select {
+	height: 30px;
+	width: 60px;
+	outline: 0;
+	position: absolute;
+	top: 9px;
+	right: 6px;
+}
