--- a/public/webStatic/css/page.css
+++ b/public/webStatic/css/page.css
@@ -35,9 +35,16 @@
 .userlist_pag ul li a{
 	color:#0e99dc ;
 }
+
 .userlist_pag ul li:nth-child(1),.userlist_pag ul li:last-child{
 	width: 89px;
 }
+.userlist_pag ul li:first-child,.userlist_pag ul li:last-child{
+	width: 89px;
+}
+
+
+
 .userlist_pag .active{
 	background-color: #FE8D01;
 	color: #FFFFFF;
