--- a/public/webStatic/css/quote.css
+++ b/public/webStatic/css/quote.css
@@ -2,7 +2,7 @@
 	padding-left: 40px;
 	padding-right: 40px;
 	height: 500px;
-	width: 820px;
+	/*width: 820px;*/
 }
 .qte-box header{
 	font-size: 24px;
@@ -17,7 +17,15 @@
 	overflow: hidden;
 
 	line-height: 60px;
+	
 	font-size: 15px;
+}
+.qte-box div {
+	
+
+	line-height: 60px\9;
+	
+	
 }
 .qte-box div input {
 	width: 283px;
@@ -33,6 +41,12 @@
 .qte-box div p:nth-child(2){
 	margin-left: 20px;
 }
+.qte-box div p:first-child+p{
+	margin-left: 20px;
+}
+
+
+
 
 .qte-box select{
 	width: 286px;
