--- a/public/webStatic/css/user-management.css
+++ b/public/webStatic/css/user-management.css
@@ -22,6 +22,17 @@
 	margin-left: 15px;
 	margin-right: 3%;
 }
+.umt-filtrate select:first-child+select,.umt-filtrate select:first-child+select+select+select{
+	width: 13%;
+	height: 24px;
+	margin-left: 15px;
+	margin-right: 3%;
+}
+
+
+
+
+
 .umt-filtrate input{
 	height: 21px;
 	width: 13%;
@@ -57,6 +68,15 @@
 	margin-left: 15px;
 	margin-right: 3%;
 }
+.czi-filtrate select:first-child+select{
+	width: 26%;
+	height: 24px;
+	margin-left: 15px;
+	margin-right: 3%;
+}
+
+
+
 .czi-filtrate input{
 	height: 21px;
 	width: 26%;
