--- a/public/webStatic/css/addclassify.css
+++ b/public/webStatic/css/addclassify.css
@@ -30,7 +30,7 @@
 	outline: none;
 	margin-left: 20px;
 	text-indent: 15px;
-	
+	line-height: 40px;
 	font-size: 14px;
 }
 .csy-box div p:nth-child(1){
