--- a/public/webStatic/css/login.css
+++ b/public/webStatic/css/login.css
@@ -32,6 +32,7 @@
 				border: none;
 				width: 400px;
 				text-indent: 20px;
+				line-height: 48px;
 			}
 			
 			.possword {
@@ -47,6 +48,7 @@
 				border: none;
 				width: 400px;
 				text-indent: 20px;
+				line-height: 48px;
 			}
 			.remeword{
 				text-align: right;
