--- a/public/webStatic/css/goods-management.css
+++ b/public/webStatic/css/goods-management.css
@@ -12,3 +12,46 @@ table img{
 	margin-bottom: 5px;
 	
 }
+.tre-shaixuan {
+   
+    height: 36px;
+  
+    float: left;
+    margin-left: 35px;
+    line-height: 36px;}
+    .plat_shanixuan {
+    width: 85px;
+    height: 36px;
+    line-height: 36px;
+    color: #fff;
+    font-size: 16px;
+    text-indent: 18px;
+    background-color: #fe8d01;
+    float: left;
+    border-radius: 20px;}
+    .plat_stauschoose {
+    float: left;
+    background: #DDDDDD;
+    border-radius: 20px;
+    margin-left: -28px;
+    padding-right: 20px;
+}
+.tre-state {
+    width: 151px;
+    height: 24px;
+    margin-left: 137px;
+}
+
+.tre-btn {
+    display: block;
+    width: 91px;
+    height: 36px;
+    background: #f3570d;
+    text-align: center;
+    line-height: 36px;
+    float: left;
+    color: #FFFFFF;
+    font-size: 16px;
+    border-radius: 15px;
+    margin-left: 10px;
+}
