--- a/public/webStatic/css/home.css
+++ b/public/webStatic/css/home.css
@@ -42,7 +42,7 @@ body {
 	color: #FFFFFF;
 	text-indent: 45px;
 	font-size: 16px;
-	background: url(../images/exit.png) no-repeat 0 0 #fe7e01;
+	background: url(../images/exit.png) no-repeat 0 3px #fe7e01;
 	color: #FFFFFF;
 }
 .headerdiv2 a{
