--- a/public/webStatic/css/home.css
+++ b/public/webStatic/css/home.css
@@ -131,7 +131,7 @@ body {
 	margin-left: 200px;
 	display: flex;
 	/*padding-right: 190px;*/
-	width: 89.6%;
+	/*width: 89.6%;*/
 }
 
 .sidebar-menu {
