--- a/public/webStatic/css/adduser.css
+++ b/public/webStatic/css/adduser.css
@@ -31,7 +31,7 @@ input{
 	height: 42px;
 	outline: none;	
 	margin-left: 15px;
-	text-indent: 18px;
+	/*text-indent: 18px;*/
 	line-height: 42px;
 }
 
