--- a/public/webStatic/css/print.css
+++ b/public/webStatic/css/print.css
@@ -2,6 +2,10 @@
 	display: block;
 	margin-top:20px ;
 }
+#myprint{
+	display: block;
+	margin-top:20px ;
+}
 td{
 	border-right: 1px solid #333333 !important;
 }
