--- a/public/webStatic/css/home.css
+++ b/public/webStatic/css/home.css
@@ -49,9 +49,10 @@ body {
 	color: #FFFFFF;
 }
 .home-header div span {
+	padding-left: 10px;
+	padding-right: 10px;
 	display: inline-block;
 	height: 30px;
-	width: 130px;
 	line-height: 30px;
 	background: #feb501;
 	margin-left: 20px;
@@ -64,7 +65,8 @@ body {
     .home-header div span {
 		display: inline-block;
 		height: 30px;
-		width:90px;
+		padding-left: 8px;
+		padding-right: 8px;		
 		line-height: 30px;
 		background: #feb501;
 		margin-left: 5px;
